# seahorse-sharing

./: Makefile  README.md  seahorse-sharing.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
src/daemon/: Makefile.am  Makefile.in  seahorse-daemon.c  seahorse-daemon.h  seahorse-hkp-server.c  seahorse-sharing.1  seahorse-sharing.c  seahorse-sharing.desktop.in  seahorse-unix-signal.c  seahorse-unix-signal.h
src/libegg/: Makefile.am  Makefile.in  eggsmclient-xsmp.c  eggsmclient.c
src/pixmaps/: Makefile.in
src/pixmaps/22x22/: Makefile.am  Makefile.in
src/pixmaps/48x48/: Makefile.am  Makefile.in
src/pixmaps/scalable/: Makefile.am  Makefile.in
src/po/: LINGUAS  POTFILES.in  cs.po  de.po  es.po  gl.po  hu.po  lv.po  pl.po  pt_BR.po  ru.po  sl.po  sr.po  sr@latin.po
